css/lesson.css
@import url("./index.css");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  letter-spacing: 2px;
}

body {
  background-color: var(--bg-primary);
  color: var(--text-secondary);
}
.disabled {
  cursor: not-allowed !important;
}
.incorrect {
  border: 4px solid red !important;
}
.correct {
  border: 4px solid green !important;
}
.lessonContainer {
  width: 80vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin: 0 auto;
}

.progressContainer {
  display: flex;
  height: 10%;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.progressContainer .close {
  height: 100%;
  width: 10%;
  cursor: pointer;
  position: relative;
  overflow: hidden;
}

.progressContainer .close hr {
  width: min(30px, 90%);
  height: 2px;
  position: absolute;
  background-color: var(--text-secondary);
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(45deg);
}

.progressContainer .close hr:nth-child(2) {
  transform: translate(-50%, -50%) rotate(-45deg);
}

.progressContainer .progressBar {
  width: 70%;
  height: 50%;
  border: 2px solid var(--text-primary);
  border-radius: 12px;
  box-shadow: inset 0 0 10px 0px var(--text-primary);
  overflow: hidden;
}

.progressContainer .progressBar .progress {
  height: 100%;
  width: 100%;
  background: var(--secondary);
  border-radius: 12px;
  transition: width 600ms ease;
}

.progressContainer .remaining {
  height: 100%;
  width: 10%;
  font-weight: bold;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
}

.main {
  width: 80%;
  height: 80%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.main .question {
  width: 100%;
  color: var(--text-secondary);
  font-size: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  text-transform: capitalize;
}

.main .image {
  width: 100%;
  height: 70%;
  border-radius: 12px;
  overflow: hidden;
  margin: 1rem 0;
}

.main .image img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-radius: 12px;
}

.main .options {
  display: flex;
  width: 100%;
  justify-content: space-between;

  align-items: center;
  flex-wrap: wrap;
}

.main .options .option {
  align-items: center;
  background-color: var(--secondary);
  border: none;
  border-radius: 8px;
  color: var(--text-secondary);
  cursor: pointer;
  display: flex;
  font-family: Inter, sans-serif;
  font-size: 16px;
  height: 48px;
  justify-content: center;
  line-height: 24px;
  max-width: 100%;
  padding: 0 25px;
  text-align: center;
  text-decoration: none;
  position: relative;
  margin: 0.25rem auto;
}

.main .options .option:after {
  background-color: var(--text-secondary);
  border-radius: 8px;
  content: "";
  display: block;
  height: 48px;
  left: 0;
  width: 100%;
  position: absolute;
  top: 0px;
  transform: translate(4px, 4px);
  transition: transform 0.2s ease-out;
  z-index: -1;
}

.main .options .option:hover:after {
  transform: translate(0, 0);
}

.main .options .option:active {
  background-color: #ffdeda;
  outline: 0;
}

.main .options .option:hover {
  outline: 0;
}

.lessonContainer .continue {
  width: 100%;
  height: 5%;
  cursor: pointer;
  font-size: clamp(1rem, 2rem);
  border: none;
  outline: none;
  background: var(--secondary);
  border-radius: 24px;
  text-transform: uppercase;
  color: var(--text-secondary);
}

/*medium */
@media only screen and (max-width: 700px) {
  .lessonContainer {
    width: 100vw;
    margin: 0;
    padding: 0;
    overflow: hidden;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  .main {
    width: 100%;
    padding: 0 1rem;
  }

  .main .question {
    font-size: 1rem;
  }
}

